--- a/MiniProjekat/HCIMiniProjekat/MainWindow.xaml
+++ b/MiniProjekat/HCIMiniProjekat/MainWindow.xaml
@@ -48,12 +48,12 @@
             </Button.Resources>
         </Button>
 
-        <lvc:CartesianChart LegendLocation="Right" Grid.Column="0" Grid.ColumnSpan="4" Grid.Row="2">
+        <lvc:CartesianChart Series="{Binding Path=lineChart.seriesCollection}" LegendLocation="Right" Grid.Column="0" Grid.ColumnSpan="4" Grid.Row="2">
             <lvc:CartesianChart.AxisY>
                 <lvc:Axis Title="Value"></lvc:Axis>
             </lvc:CartesianChart.AxisY>
             <lvc:CartesianChart.AxisX>
-                <lvc:Axis Title="Date"></lvc:Axis>
+                <lvc:Axis Title="Date" LabelFormatter="{Binding Path=lineChart.dates}"></lvc:Axis>
             </lvc:CartesianChart.AxisX>
         </lvc:CartesianChart>
 
