--- a/MiniProjekat/HCIMiniProjekat/MainWindow.xaml
+++ b/MiniProjekat/HCIMiniProjekat/MainWindow.xaml
@@ -8,31 +8,36 @@
         Title="Economical indicators for USA" Height="450" Width="800">
     <Grid>
         <Grid.RowDefinitions>
+            <RowDefinition Height="0.2*"/>
             <RowDefinition Height="*" />
             <RowDefinition Height="0.5*" />
             <RowDefinition Height="10*" />
             <RowDefinition Height="*" />
             <RowDefinition Height="*" />
             <RowDefinition Height="*" />
+            <RowDefinition Height="0.5*"/>
         </Grid.RowDefinitions>
         <Grid.ColumnDefinitions>
+            <ColumnDefinition Width="0.2*" />
             <ColumnDefinition Width="*" />
             <ColumnDefinition Width="*" />
             <ColumnDefinition Width="*" />
             <ColumnDefinition Width="*" />
             <ColumnDefinition Width="*" />
             <ColumnDefinition Width="*" />
+            <ColumnDefinition Width="0.5*" />
             <ColumnDefinition Width="*" />
+            <ColumnDefinition Width="0.5*" />
             <ColumnDefinition Width="*" />
-            <ColumnDefinition Width="*" />
+            <ColumnDefinition Width="0.2*" />
         </Grid.ColumnDefinitions>
 
-        <Label Content="Data:" Grid.Column="0" Grid.Row="0" HorizontalAlignment="Right"  Foreground="#000000"/>
-        <ComboBox Grid.Column="1" Grid.ColumnSpan="2" x:Name="dataType" Grid.Row="0" IsEditable="False" SelectionChanged="CheckIntervals"/>
-        <Label Content="Interval:" Grid.Column="3" Grid.Row="0" HorizontalAlignment="Right"  Foreground="#000000"/>
-        <ComboBox Grid.Column="4" Grid.ColumnSpan="2" x:Name="interval" Grid.Row="0" IsEditable="False" />
+        <Label Content="Data:" Grid.Column="1" Grid.Row="1" HorizontalAlignment="Right"  Foreground="#000000"/>
+        <ComboBox Grid.Column="2" Grid.ColumnSpan="2" x:Name="dataType" Grid.Row="1" IsEditable="False" SelectionChanged="CheckIntervals"/>
+        <Label Content="Interval:" Grid.Column="4" Grid.Row="1" HorizontalAlignment="Right"  Foreground="#000000"/>
+        <ComboBox Grid.Column="5" Grid.ColumnSpan="2" x:Name="interval" Grid.Row="1" IsEditable="False" />
 
-        <Button Content="Show" Grid.Column="7" Grid.Row="0" Click="DrawHandler" Background="#008080" Foreground="White">
+        <Button Content="Show data" Grid.Column="8" Grid.Row="1" Click="DrawHandler" Background="#008080" Foreground="White">
             <Button.Resources>
                 <Style TargetType="Border">
                     <Setter Property="CornerRadius" Value="7"/>
@@ -40,7 +45,15 @@
             </Button.Resources>
         </Button>
 
-        <Button Content="Show table" Grid.Column="4" Grid.Row="4" Click="TableHandler" Background="#008080" Foreground="White">
+        <Button Content="Clear data" Grid.Column="10" Grid.Row="1" Click="ClearHandler" Background="#008080" Foreground="White">
+            <Button.Resources>
+                <Style TargetType="Border">
+                    <Setter Property="CornerRadius" Value="7"></Setter>
+                </Style>
+            </Button.Resources>
+        </Button>
+
+        <Button Content="Show table" Grid.Column="8" Grid.ColumnSpan="3" Grid.Row="6" Click="TableHandler" Background="#008080" Foreground="White">
             <Button.Resources>
                 <Style TargetType="Border">
                     <Setter Property="CornerRadius" Value="7"/>
@@ -48,7 +61,7 @@
             </Button.Resources>
         </Button>
 
-        <lvc:CartesianChart Series="{Binding Path=lineChart.seriesCollection}" LegendLocation="Right" Grid.Column="0" Grid.ColumnSpan="4" Grid.Row="2">
+        <lvc:CartesianChart Series="{Binding Path=lineChart.seriesCollection}" LegendLocation="Right" Grid.Column="1" Grid.ColumnSpan="4" Grid.Row="3" Grid.RowSpan="2">
             <lvc:CartesianChart.AxisY>
                 <lvc:Axis Title="Value"></lvc:Axis>
             </lvc:CartesianChart.AxisY>
@@ -57,7 +70,7 @@
             </lvc:CartesianChart.AxisX>
         </lvc:CartesianChart>
 
-        <lvc:CartesianChart LegendLocation="Right" Grid.Column="5" Grid.ColumnSpan="4" Grid.Row="2">
+        <lvc:CartesianChart LegendLocation="Right" Grid.Column="6" Grid.ColumnSpan="5" Grid.Row="3" Grid.RowSpan="2">
             <lvc:CartesianChart.AxisY>
                 <lvc:Axis Title="Value"></lvc:Axis>
             </lvc:CartesianChart.AxisY>
