--- a/MiniProjekat/HCIMiniProjekat/TableWindow.xaml
+++ b/MiniProjekat/HCIMiniProjekat/TableWindow.xaml
@@ -5,26 +5,40 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:HCIMiniProjekat"
         mc:Ignorable="d"
-        Title="Tabelar data views" Height="450" Width="800">
+        Title="Tabelar data view" Height="450" Width="800">
     <Grid>
-        <DataGrid x:Name="DataTable">
+
+        <DataGrid x:Name="DataTable" CanUserSortColumns="True">
 
             <DataGrid.Resources>
                 <Style TargetType="DataGridColumnHeader">
-                    <Setter Property="Background" Value="Turquoise"></Setter>
+                    <Setter Property="Background" Value="#008080"></Setter>
                     <Setter Property="FontWeight" Value="Bold"></Setter>
                     <Setter Property="BorderBrush" Value="Black"></Setter>
                     <Setter Property="BorderThickness" Value="0, 0, 1, 2"></Setter>
                     <Setter Property="HorizontalContentAlignment" Value="Center"></Setter>
+                    <Setter Property="FontSize" Value="20"></Setter>
                 </Style>
             </DataGrid.Resources>
 
             <DataGrid.Columns>
                 <DataGridTextColumn Header="Date" Width="*" Binding="{Binding date}"></DataGridTextColumn>
-                <DataGridTextColumn Header="Value" Width="*" Binding="{Binding value}"></DataGridTextColumn>
+                <DataGridTextColumn Header="Value" Width="*" Binding="{Binding value}">
+                    <DataGridTextColumn.ElementStyle>
+                        <Style TargetType="{x:Type TextBlock}">
+                            <Style.Triggers>
+                                <DataTrigger Binding="{Binding barChart.minValue}">
+                                    <Setter Property="Background" Value="Yellow"/>
+                                </DataTrigger>
+                                <DataTrigger Binding="{Binding barChart.maxValue}">
+                                    <Setter Property="Background" Value="Red"/>
+                                </DataTrigger>
+                            </Style.Triggers>
+                        </Style>
+                    </DataGridTextColumn.ElementStyle>
+                </DataGridTextColumn>
             </DataGrid.Columns>
-            
         </DataGrid>
-        
+
     </Grid>
 </Window>
